--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
   "dependencies": {
     "@babel/generator": "^7.12.11",
     "@babel/parser": "^7.12.11",
-    "@types/json-schema": "^7.0.6"
+    "@types/json-schema": "^7.0.6",
+    "change-case": "^4.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
