--- a/package.json
+++ b/package.json
@@ -65,12 +65,14 @@
     "@babel/generator": "^7.12.11",
     "@babel/parser": "^7.12.11",
     "@types/json-schema": "^7.0.6",
-    "change-case": "^4.1.2"
+    "change-case": "^4.1.2",
+    "js-yaml": "^3.14.1"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@types/jest": "26.0.15",
+    "@types/js-yaml": "^3.12.5",
     "@types/node": "14.14.7",
     "@types/rimraf": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.7.0",
