--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "test:code:gen": "yarn ts ./scripts/testCodeGen.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
     "test:jest": "jest -c ./jest.config.js",
-    "ts": "ts-node -P tsconfig.build.json"
+    "ts": "ts-node -P tsconfig.build.json",
+    "watch": "yarn ts ./scripts/watch.ts"
   },
   "husky": {
     "hooks": {
@@ -72,6 +73,7 @@
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
+    "@types/chokidar": "^2.1.3",
     "@types/jest": "26.0.15",
     "@types/js-yaml": "^3.12.5",
     "@types/node": "14.14.7",
@@ -79,6 +81,7 @@
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
     "cherry-pick": "0.5.0",
+    "chokidar": "^3.4.3",
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "8.1.1",
     "dependency-cruiser": "9.17.0",
