--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/parser": "^7.12.11",
     "@types/json-schema": "^7.0.6",
     "change-case": "^4.1.2",
+    "dot-prop": "^6.0.1",
     "js-yaml": "^3.14.1"
   },
   "devDependencies": {
