fix: referenceの挙動を安定化

--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -45,6 +45,8 @@ components:
       schema:
         type: string
         example: "https://example.com"
+    Authorization:
+      $ref: "./components/headers/Authorization.yml"
   responses:
     SucceededCreatingBlogPost:
       description: "Succeeded in creating a blog post"
