--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -66,13 +66,15 @@ components:
                   status:
                     type: number
         application/x-www-form-urlencoded:
-          type: object
-          properties:
-            meta:
-              type: object
-              properties:
-                status:
-                  type: number
+          description: Blog post creation success response.
+          schema:
+            type: object
+            properties:
+              meta:
+                type: object
+                properties:
+                  status:
+                    type: number
     FailedCreatingBlogPost:
       $ref: "./components/responses/FailedCreatingBlogPost.yml"
   parameters:
