--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -109,3 +109,5 @@ components:
       scheme: "http"
       openIdConnectUrl: ""
   pathItems:
+    /categories:
+      $ref: "./components/pathItems/categories.yml"
