--- a/package.json
+++ b/package.json
@@ -66,26 +66,23 @@
     "node-fetch": "2.6.1"
   },
   "dependencies": {
-    "@babel/generator": "^7.12.11",
-    "@babel/parser": "^7.12.11",
-    "@types/json-schema": "^7.0.6",
-    "change-case": "^4.1.2",
-    "dot-prop": "^6.0.1",
-    "js-yaml": "^3.14.1",
+    "@types/json-schema": "7.0.6",
+    "dot-prop": "6.0.1",
+    "js-yaml": "3.14.1",
     "typescript": "4.0.5"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
-    "@types/chokidar": "^2.1.3",
+    "@types/chokidar": "2.1.3",
     "@types/jest": "26.0.15",
-    "@types/js-yaml": "^3.12.5",
+    "@types/js-yaml": "3.12.5",
     "@types/node": "14.14.7",
     "@types/rimraf": "3.0.0",
     "@typescript-eslint/eslint-plugin": "4.7.0",
     "@typescript-eslint/parser": "4.7.0",
     "cherry-pick": "0.5.0",
-    "chokidar": "^3.4.3",
+    "chokidar": "3.4.3",
     "conventional-changelog-angular-all": "1.7.0",
     "cpy": "8.1.1",
     "dependency-cruiser": "9.17.0",
@@ -95,12 +92,14 @@
     "execa": "4.1.0",
     "generate-changelog": "1.8.0",
     "husky": "4.3.0",
+    "import-sort-style-module": "6.0.0",
     "jest": "26.6.3",
     "jest-cli": "26.6.3",
     "lerna": "3.22.1",
     "lint-staged": "10.5.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.1.2",
+    "prettier-plugin-import-sort": "0.0.6",
     "rimraf": "3.0.2",
     "sort-package-json": "1.46.1",
     "ts-jest": "26.4.4",
@@ -109,5 +108,11 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
   }
 }
