feat: operation.parameteresのreference対応

--- a/test/api.test.domain/components/pathItems/categories.yml
+++ b/test/api.test.domain/components/pathItems/categories.yml
@@ -25,11 +25,4 @@ get:
                     - $ref: "../schemas/Category/Technology.yml"
 
   parameters:
-    - in: query
-      name: field
-      schema:
-        type: array
-        items:
-          type: string
-      required: true
-      explode: false
+    - $ref: "../parameters/Field.yml"
