--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js",
     "ts": "ts-node -P tsconfig.build.json",
+    "validate": "yarn ts ./scripts/validate.ts",
     "watch": "yarn ts ./scripts/watch.ts"
   },
   "husky": {
@@ -98,6 +99,7 @@
     "lerna": "3.22.1",
     "lint-staged": "10.5.3",
     "npm-run-all": "4.1.5",
+    "openapi-schema-validator": "^7.0.1",
     "prettier": "2.2.1",
     "prettier-plugin-import-sort": "0.0.6",
     "rimraf": "3.0.2",
