--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -137,3 +137,18 @@ components:
       $ref: "./components/pathItems/CategoryCRUD.yml"
 
 paths:
+  /blog:
+    post:
+      description: Create Blog
+      summary: Create Blog
+      operationId: createBlog
+      responses:
+        "200":
+          $ref: "#/components/responses/SucceededCreatingBlogPost"
+    delete:
+      description: Delete Blog
+      summary: Delete Blog
+      operationId: deleteBlog
+      responses:
+        "401":
+          $ref: "./components/responses/blog/AuthorizationError.yml"
