--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "noFallthroughCasesInSwitch": true,
     "noUnusedParameters": false,
     "skipLibCheck": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "target": "esnext",
     "lib": ["dom", "es2019"],
     "rootDir": ".",
