--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -160,7 +160,15 @@ paths:
           name: id
           schema:
             type: number
-      responses:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+            responses:
         "401":
           $ref: "./components/responses/blog/AuthorizationError.yml"
   /multi/response:
@@ -194,12 +202,33 @@ paths:
                     properties:
                       status:
                         type: number
-            # application/xml:
-            #   schema:
-            #     type: object
-            #     properties:
-            #       meta:
-            #         type: object
-            #         properties:
-            #           status:
-            #             type: number
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  meta:
+                    type: object
+                    properties:
+                      status:
+                        type: number
+        "203":
+          description: "Multiresponse"
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  meta:
+                    type: object
+                    properties:
+                      status:
+                        type: number
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  meta:
+                    type: object
+                    properties:
+                      status:
+                        type: number
