--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -202,15 +202,15 @@ paths:
                     properties:
                       status:
                         type: number
-            application/xml:
-              schema:
-                type: object
-                properties:
-                  meta:
-                    type: object
-                    properties:
-                      status:
-                        type: number
+            # application/xml:
+            #   schema:
+            #     type: object
+            #     properties:
+            #       meta:
+            #         type: object
+            #         properties:
+            #           status:
+            #             type: number
         "203":
           description: "Multiresponse"
           content:
@@ -223,12 +223,12 @@ paths:
                     properties:
                       status:
                         type: number
-            application/xml:
-              schema:
-                type: object
-                properties:
-                  meta:
-                    type: object
-                    properties:
-                      status:
-                        type: number
+            # application/xml:
+            #   schema:
+            #     type: object
+            #     properties:
+            #       meta:
+            #         type: object
+            #         properties:
+            #           status:
+            #             type: number
