--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -181,37 +181,16 @@ paths:
             schema:
               type: object
               properties:
-                name:
+                nameJson:
                   type: string
           application/xml:
             schema:
               type: object
               properties:
-                name:
+                nameXML:
                   type: string
       responses:
         "200":
-          description: "Multiresponse"
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  meta:
-                    type: object
-                    properties:
-                      status:
-                        type: number
-            application/xml:
-              schema:
-                type: object
-                properties:
-                  meta:
-                    type: object
-                    properties:
-                      status:
-                        type: number
-        "203":
           description: "Multiresponse"
           content:
             application/json:
