--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "lerna:version:up": "lerna version --yes",
     "release:github:registry": "yarn publish --registry https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}",
     "release:npm:registry": "yarn publish",
-    "test": "run-s test:depcruise test:jest",
+    "test": "run-s test:depcruise test:jest test:code:gen test:snapshot",
     "test:code:gen": "yarn ts ./scripts/testCodeGen.ts",
     "test:depcruise": "depcruise --validate .dependency-cruiser.js src",
     "test:eslint": "eslint \"src/**/*.{ts,tsx}\"",
     "test:jest": "jest -c ./jest.config.js",
+    "test:snapshot": "jest -c ./jest.snapshot.config.js",
     "ts": "ts-node -P tsconfig.build.json",
+    "update:snapshot": "yarn test:snapshot --updateSnapshot",
     "validate": "yarn ts ./scripts/validate.ts",
     "watch": "yarn ts ./scripts/watch.ts"
   },
