--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "dependencies": {
     "@types/json-schema": "7.0.6",
+    "ajv": "7.0.3",
     "dot-prop": "6.0.1",
     "js-yaml": "4.0.0",
     "typescript": "4.1.3"
