test: add directory schema

--- a/test/api.test.domain/components/schemas/Level1/Level2/Level3/Level4/RemoteObject.yml
+++ b/test/api.test.domain/components/schemas/Level1/Level2/Level3/Level4/RemoteObject.yml
@@ -1,8 +1,7 @@
 type: object
+description: Level 4
 properties:
-  id:
-    $ref: "./UserId.yml"
-  username:
+  A:
     type: string
-  age:
+  B:
     type: number
