feat: update test

--- a/test/api.test.domain/index.yml
+++ b/test/api.test.domain/index.yml
@@ -191,6 +191,9 @@ components:
         type: integer
     ReferenceOfParameterToSchema:
       description: parameters -> schemas
+      required: true
+      in: query
+      name: for-ref
       content:
         application/json:
           schema:
