test: add header reference

--- a/test/api.test.domain/components/responses/ResponseA.yml
+++ b/test/api.test.domain/components/responses/ResponseA.yml
@@ -1,4 +1,11 @@
 description: response A definition
+headers:
+  HeaderA:
+    $ref: "../headers/A.yml"
+  HeaderB:
+    description: HeaderB
+    schema:
+      type: string
 content:
   application/json:
     schema:
