--- a/example/package.json
+++ b/example/package.json
@@ -10,8 +10,7 @@
     "ts": "ts-node -P tsconfig.json"
   },
   "dependencies": {
-    "@himenon/openapi-parameter-formatter": "0.2.1",
-    "@himenon/openapi-typescript-code-generator": "../lib"
+    "@himenon/openapi-parameter-formatter": "0.2.1"
   },
   "devDependencies": {
     "ts-node": "9.1.1",
