--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -3,6 +3,6 @@
     "module": "commonjs",
     "declaration": false
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "./src/**/__tests__/*", "scripts"]
+  "include": ["."],
+  "exclude": ["node_modules"]
 }
